--- a/myeclipse/WebRoot/WEB-INF/web.xml
+++ b/myeclipse/WebRoot/WEB-INF/web.xml
@@ -16,4 +16,7 @@
     <filter-name>struts2</filter-name>
     <url-pattern>*.action</url-pattern>
   </filter-mapping>
+  <welcome-file-list>
+  	<welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
 </web-app>
