--- a/myeclipse/WebRoot/WEB-INF/web.xml
+++ b/myeclipse/WebRoot/WEB-INF/web.xml
@@ -12,16 +12,29 @@
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
   
+  <!-- 吴培胜在进明配置的基础上加的    Struts2ActionContextCleanUp过滤器-->
+  <filter>
+  	<filter-name>struts2-cleanup</filter-name>
+  	<filter-class>org.apache.struts2.dispatcher.ActionContextCleanUp</filter-class>
+  </filter>
 
   <filter>
     <filter-name>struts2</filter-name>
-    <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
+    	<!-- 这里是吴培胜配置的dispatcher -->
+    <!--	<filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class> -->
+    	<!-- 这是进明配置原始的 dispatcher-->
+  <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>   
+        <init-param>
+          <param-name>actionPackages</param-name>
+          <param-value>org.humanDepartment.humanSystem.action</param-value>
+ 		</init-param>
   </filter>
   <filter-mapping>
     <filter-name>struts2</filter-name>
     <url-pattern>*.action</url-pattern>
+    <url-pattern>*.jsp</url-pattern><!-- 在这里添加这个表示*。jsp的网页可以使用Struts2的标签 -->
   </filter-mapping>
   <welcome-file-list>
-  	<welcome-file>/jsp/humanDepartment/peopleTeamManage/login.jsp</welcome-file>
+  	<welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
